# SDSC-hackathon-2023

./: .gitignore  LICENSE  README.md  TODOs.md  environment.yaml  extract_masks.ipynb  pyproject.toml  requirements.txt
notebook/: train_gan.ipynb
notebook/eda/: Explore_Files.ipynb  Image_Blending_Inpainting.ipynb  Image_Blending_Inpainting_2.ipynb  Sandbox.ipynb
notebook/prepare_data/: extract_masks.ipynb  preprocess_masks.ipynb  pytorch_dataset_dev.ipynb  pytorch_datasets_dev.ipynb  yolo_data.yaml  yolo_train.ipynb
src/: __init__.py  dataset.py  datasets.py  train.py  utils.py
